docs: refine load-test-ops skill routing logic and formatting
Clarify that GHA is always required for image builds (new tests or
after pushing commits); Makefile/kubectl is the preferred path for
iterating on configuration or when a Docker image already exists.

Also: namespace convention with initials, deleteLoadTest.sh as primary
cleanup, monitoring dashboard URLs with descriptions, and remove the
duplicated options table in favour of a pointer to the workflow YAML.